<resources>
    <string name="app_name">ApertureDigital</string>

    <string name="icon_News">News</string>
    <string name="icon_History">History</string>
    <string name="icon_Lens">Lens</string>
    <string name="icon_Search">Search</string>
    <string name="icon_Settings">Settings</string>

    <string name="btn_confirm">Confirm</string>


    <string name="footerNewsBtnDescription">News Button</string>
    <string name="footerHistoryBtnDescription">History Button</string>
    <string name="footerLensBtnDescription">Lens Button</string>
    <string name="footerSearchBtnDescription">Search Button</string>
    <string name="footerSettingsBtnDescription">Settings Button</string>

    <string name="add_item_is_vegan">Is this product vegan?</string>


</resources>
