<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/news_icon"
        android:title="@string/icon_News"/>
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search_icon"
        android:title="@string/icon_Search"/>
    <item
        android:id="@+id/nav_lens"
        android:icon="@drawable/lens_icon"
        android:title="@string/icon_Lens"/>
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/history_icon"
        android:title="@string/icon_History"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/icon_Settings"/>

</menu>